Test Release Packaging (#6)
* Critical bugs (#1)

* Update .gitignore

* Correction Singleton ScoreManager, MusicController (thread-safe)

* Correction NullPointerException dans SplashScreen

* Update .gitignore

* Correction Memory leak Timeline dans Controllers

* Refactoring SOLID & Corrections Majeures (#2)

* Création des interfaces pour les callbacks

* Création du système de logging structuré

* Validation des paramètres

* Create GameCallbacks.java

* Alignement des changement dans les controller de jeux

* Mise en place du loggin structuré

* Factorisation des méthodes dupliquées

* Validation dans GameResult

* Delete CORRECTIONS_APPLIQUEES.md

* Création de TitleBarController

* Correction de l'erreur Platform

* Création de SnakeRenderer

* Correction violation Solid

* Game loop error in controller correction

* Création de l'interface Game pour Open Closed principle de solid corigé

* Update Point.java

* fix - Nombre magique → Constantes

* Update README.md

* PongController - Utilisation du renderer créer + duplication du graphic context

* Snake Controller - duplication du graphic

* Correction des import non utilisé + Final variables

* ScoreManager - Conversion en Enum Singleton

* MusicController- Conversion en Enum Singleton

* Fixed - Custom title bar disparait lors du chargement des jeux

Le problème était que les fichiers FXML définissaient déjà le contrôleur avec fx:controller="..." ET le code Java appelait fxmlLoader.setController(this), ce qui créait un conflit.e

* Fix - Screen Size height

* Update SnakeRenderer.java

* Feature : Responsive Window Sizing & Unified Custom Titlebar (#3)

* Fixed - Custom title bar disparait lors du chargement des jeux

Le problème était que les fichiers FXML définissaient déjà le contrôleur avec fx:controller="..." ET le code Java appelait fxmlLoader.setController(this), ce qui créait un conflit.e

* Fix - Screen Size height

* Update SnakeRenderer.java

* Mise en place test d'un workflow pour construire l